@@ -61,6 +61,7 @@ CAY-1938 Create a DI factory for transactions, get rid of TransactionDelegate an
 CAY-1939 DataDomain must use injectable TransactionManager
 CAY-1949 Search in configuration fields (Catalog, Schema) in DbEntity
 CAY-1952 Undeprecate (actually restore) ObjectContext.deleteObject(..)
+CAY-1953 Redo ResultIteratorCallback to handle single row callback instead of iterator
 
 Bug Fixes:
 
